# El-Lado-Oscuro-del-Carrito

./: .gitignore  CMakeLists.txt  README.md
compilados_py/Release/: personaje.cp311-win_amd64.pyd
docs/: documentacion_proyecto.docx
src/bindings/: envioper.cpp
src/cpp/: contenido_cpp.md  creacion de tienda  creacion tienda.cpp  misiones.cpp  personaje.cpp
src/include/: personaje.h
src/python/: animales.py  cambio_escenarios.py  claude.py  colisiones.py  comparador_productos.py  dialogos.py  dialogos_juego.py  enhanced_main.py  gemini.py  impacto_visual_mundo.py  inventario.py  jugador.py  main.py  mecanicas_anticonsumo.py  notificaciones.py  npc.py  personaje.py  personaje2.py  personaje2_pruebas.py  personajes.py  popup_decision.py  pruebas_main.py  pruebas_main.spec  test_systems.py  textos.py  tienda.py  ui.py
